add apis for retrieval and analyse deeeper
